<resources>
    <string name="fb_msg_loading">Loading...</string>
    <string name="zm_lbl_copy_to_clipboard">Copy to Clipboard</string>
    <string name="zm_lbl_pull_down_refresh_list_release_to_refresh">Release to refresh</string>
    <string name="zm_lbl_pull_down_refresh_list_pull_down_to_refresh">Pull down to refresh</string>
    <string name="zm_lbl_pull_down_refresh_list_loading">Loading...</string>
    <string name="zm_date_time_set">Set</string>
    <string name="zm_date_time_cancel">Cancel</string>
    <string name="zm_time_picker_dialog_title">Set time</string>
    <string name="zm_login_to_start_conf">Sign In</string>
    <string name="zm_login_with_facebook">Facebook</string>
    <string name="zm_login_with_google">Google</string>
    <string name="zm_login_with_sso">SSO</string>
    <string name="zm_login_step_connecting">Connecting...</string>
    <string name="zm_login_step_authenticating">Getting buddy list...</string>
    <string name="zm_login_step_negotiating">Negotiating...</string>
    <string name="zm_connecting_facebook">Connecting...</string>
    <string name="zm_mi_start_conf">Meet Now</string>
    <string name="zm_mi_return_to_conf">Back to Meeting</string>
    <string name="zm_mi_invite_to_conf">Invite to Meeting</string>
    <string name="zm_mi_remove_buddy">Remove...</string>
    <string name="zm_mi_invite_again">Invite again</string>
    <string name="zm_mi_mute">Mute</string>
    <string name="zm_mi_unmute">Unmute</string>
    <string name="zm_mi_make_host">Make Host</string>
    <string name="zm_mi_expel">Remove</string>
    <string name="zm_mi_chat">Chat</string>
    <string name="zm_mi_spotlight_video">Spotlight Video</string>
    <string name="zm_mi_unspotlight_video">Cancel Spotlight Video</string>
    <string name="zm_mi_allow_record">Allow Record</string>
    <string name="zm_mi_disallow_record">Forbid Record</string>
    <string name="zm_mi_create_new_contact">Create Phone Contact</string>
    <string name="zm_mi_add_to_existing_contact">Add to Existing Phone Contact</string>
    <string name="zm_mi_add_zoom_contact">Add to Zoom Contacts</string>
    <string name="zm_mi_remove_zoom_contact">Remove from Zoom Contacts</string>
    <string name="zm_mi_switch_camera">Switch Camera</string>
    <string name="zm_mi_enter_silent_mode">Start attendee on hold</string>
    <string name="zm_mi_leave_silent_mode">Stop attendee on hold</string>
    <string name="zm_mi_lock_meeting">Lock Meeting</string>
    <string name="zm_mi_unlock_meeting">Unlock Meeting</string>
    <string name="zm_mi_lock_share">Lock Share</string>
    <string name="zm_mi_unlock_share">Unlock Share</string>
    <string name="zm_mi_mute_on_entry">Mute On Entry</string>
    <string name="zm_mi_cancel_mute_on_entry">Cancel Mute On Entry</string>
    <string name="zm_mi_play_enter_exit_chime">Play Enter/Exit Chime</string>
    <string name="zm_mi_remove_enter_exit_chime">Remove Enter/Exit Chime</string>
    <string name="zm_mi_speaker_phone">Speaker Phone</string>
    <string name="zm_mi_bluetooth">Bluetooth</string>
    <string name="zm_mi_ear_phone">Ear Phone</string>
    <string name="zm_mi_wired_headset">Wired Headset</string>
    <string name="zm_mi_video_stop">Stop Video</string>
    <string name="zm_lbl_input_meeting_link">OR, JOIN BY MEETING LINK</string>
    <string name="zm_lbl_meeting_number_discription">Meeting ID is a 9 or 10 digits number</string>
    <string name="zm_lbl_name_instructions">Please enter your name</string>
    <string name="zm_lbl_password_instructions">Please enter your meeting password</string>
    <string name="zm_lbl_name_password_instructions">Please enter your name and the meeting password</string>
    <string name="zm_lbl_incorrect_meeting_password">Incorrect meeting password, please try again</string>
    <string name="zm_lbl_everyone">Chat with All</string>
    <string name="zm_lbl_role_me">(me)</string>
    <string name="zm_lbl_role_host">(host)</string>
    <string name="zm_lbl_role_me_host">(host, me)</string>
    <string name="zm_lbl_role_in_silent_mode">(On Hold)</string>
    <string name="zm_lbl_version">Version</string>
    <string name="zm_lbl_alert_me_for_im_message">Message Notifications</string>
    <string name="zm_lbl_alert_sound">Alert Sound</string>
    <string name="zm_lbl_alert_vibrate">Vibrate</string>
    <string name="zm_lbl_alert_option_desc">Specify your preference to be notified by Sound or Vibration when a new message arrives.</string>
    <string name="zm_lbl_meeting_host_colon">Host:</string>
    <string name="zm_lbl_meeting_id">Meeting ID:</string>
    <string name="zm_lbl_meeting_id2">Meeting ID</string>
    <string name="zm_lbl_topic_colon">Topic: %s</string>
    <string name="zm_lbl_duration">Duration</string>
    <string name="zm_lbl_date">Date:</string>
    <string name="zm_lbl_time">Time:</string>
    <string name="zm_lbl_time_recurring">This is a recurring meeting</string>
    <string name="zm_lbl_invite_buddy_fb">Invite Facebook Contacts</string>
    <string name="zm_lbl_invite_buddy_google">Invite Google IM Contacts</string>
    <string name="zm_lbl_invite_buddy_zoom">Invite Zoom Contacts</string>
    <string name="zm_lbl_copy_url">Copy URL</string>
    <string name="zm_lbl_delete">Delete</string>
    <string name="zm_lbl_buddy_invited">Invited</string>
    <string name="zm_lbl_buddy_invite_email">To invite people to Google IM, type their email addresses below:</string>
    <string name="zm_lbl_buddy_invite_invitation_msg">wants to chat with you</string>
    <string name="zm_lbl_topic">Topic</string>
    <string name="zm_lbl_topic_default">My Meeting</string>
    <string name="zm_lbl_password_schedule">Meeting Password(optional)</string>
    <string name="zm_lbl_password">Password</string>
    <string name="zm_lbl_when">When</string>
    <string name="zm_lbl_date_on_schedle">Date</string>
    <string name="zm_lbl_from">From</string>
    <string name="zm_lbl_to">To</string>
    <string name="zm_lbl_repeat">Repeat</string>
    <string name="zm_lbl_end_repeat">End Repeat</string>
    <string name="zm_lbl_repeat_never">Never</string>
    <string name="zm_lbl_repeat_daily">Daily</string>
    <string name="zm_lbl_repeat_weekly">Weekly</string>
    <string name="zm_lbl_repeat_biweekly">Biweekly</string>
    <string name="zm_lbl_repeat_monthly">Monthly</string>
    <string name="zm_lbl_repeat_yearly">Yearly</string>
    <string name="zm_lbl_repeat_never_in_list">None</string>
    <string name="zm_lbl_repeat_daily_in_list">Every Day</string>
    <string name="zm_lbl_repeat_weekly_in_list">Every Week</string>
    <string name="zm_lbl_repeat_biweekly_in_list">Every 2 Weeks</string>
    <string name="zm_lbl_repeat_monthly_in_list">Every Month</string>
    <string name="zm_lbl_repeat_yearly_in_list">Every Year</string>
    <string name="zm_lbl_end_repeat_never">Never</string>
    <string name="zm_lbl_meeting_type">Meeting Type</string>
    <string name="zm_lbl_meeting_type_video_meeting">Video Meeting</string>
    <string name="zm_lbl_meeting_type_web_meeting">Screen Share Meeting</string>
    <string name="zm_lbl_schedule_for">Schedule For</string>
    <string name="zm_lbl_schedule_for_myself">Myself</string>
    <string name="zm_lbl_enable_address_book">Phone Contacts Matching</string>
    <string name="zm_lbl_enable_address_book_instructions">Enable phone contacts matching helps you find more contacts on Zoom</string>
    <string name="zm_lbl_enable_driving_mode">Driving Mode</string>
    <string name="zm_lbl_enable_driving_mode_instructions">Driving Mode turns on speaker, stops video and mutes microphone</string>
    <string name="zm_lbl_auto_connect_voip">Auto Connect Device Audio</string>
    <string name="zm_lbl_auto_connect_voip_instructions">Automatically connect audio using internet when joining a meeting</string>
    <string name="zm_lbl_speaker">Speaker</string>
    <string name="zm_lbl_set_name_instructions">Please enter your name</string>
    <string name="zm_lbl_zoom_account">Email</string>
    <string name="zm_lbl_zoom_pwd">Password</string>
    <string name="zm_lbl_add_invitees">Add Invitees via</string>
    <string name="zm_lbl_sso_login"><a href="zoomus://null">SSO Login</a></string>
    <string name="zm_lbl_forget_password">Forgot password?</string>
    <string name="zm_lbl_forget_password_link"><![CDATA[<a href="%s">Forgot password?</a>]]></string>
    <string name="zm_lbl_or_sign_in_with">OR, SIGN IN WITH</string>
    <string name="zm_lbl_accept_terms"><![CDATA[I agree to the <a href="%s">Terms of Service</a>.]]></string>
    <string name="zm_lbl_recurring_meeting">Recurring meeting</string>
    <string name="zm_lbl_xxx_minutes">%d minutes</string>
    <string name="zm_lbl_participants">Participants</string>
    <string name="zm_lbl_history_type_declined">Declined</string>
    <string name="zm_lbl_history_type_missed">Missed</string>
    <string name="zm_lbl_history_type_join_failed">Failed to join</string>
    <string name="zm_lbl_proxy_name_password_instructions">Proxy Host: %s</string>
    <string name="zm_lbl_sso_url_instructions">Enter SSO Site URL</string>
    <string name="zm_lbl_server_name_password_instructions">Server %s requires you to enter user name and password</string>
    <string name="zm_lbl_recording">Recording</string>
    <string name="zm_lbl_starting_record">%s is starting record</string>
    <string name="zm_lbl_addrbook_phone_number">Phone Number: %1$s</string>
    <string name="zm_lbl_people_using_zoom">Contacts On Zoom</string>
    <string name="zm_lbl_people_not_using_zoom">Invite To Get Zoom</string>
    <string name="zm_lbl_tele_conf">Teleconference access:</string>
    <string name="zm_lbl_tele_conf_dial">Dial:</string>
    <string name="zm_lbl_tele_conf_us_number">(US and Canada only)</string>
    <string name="zm_lbl_personal_meeting_id">Personal Meeting ID</string>
    <string name="zm_lbl_personal_meeting_id_modify_instruction_10">Choose your 10-digits Personal Meeting ID</string>
    <string name="zm_lbl_personal_meeting_id_change_fail_invalid">This ID is taken, please choose a new ID.</string>
    <string name="zm_lbl_personal_meeting_id_rule">*Your Personal Meeting ID cannot start with number 0 or 1.</string>
    <string name="zm_btn_cancel">Cancel</string>
    <string name="zm_btn_ok">OK</string>
    <string name="zm_btn_back">Back</string>
    <string name="zm_btn_login">Sign In</string>
    <string name="zm_btn_send_activation_email_again">Resend Email</string>
    <string name="zm_btn_apply">Apply</string>
    <string name="zm_btn_next">Next</string>
    <string name="zm_btn_front_camera">Front Camera</string>
    <string name="zm_btn_back_camera">Back Camera</string>
    <string name="zm_btn_no_camera">No Camera</string>
    <string name="zm_btn_share_image">Share Photo</string>
    <string name="zm_btn_share_url">Share Web</string>
    <string name="zm_btn_share_from_bookmark">Share From Bookmark</string>
    <string name="zm_hint_zoom_pwd">Password</string>
    <string name="zm_hint_first_name">First Name</string>
    <string name="zm_hint_last_name">Last Name</string>
    <string name="zm_hint_email">Email</string>
    <string name="zm_hint_retype_pwd">Confirm Password</string>
    <string name="zm_title_signup">Sign Up</string>
    <string name="zm_title_resetpwd">Reset Password</string>
    <string name="zm_msg_indication_resetpwd">Please set your new password to login.</string>
    <string name="zm_msg_confirm_password_not_match">Confirm password doesn\'t match</string>
    <string name="zm_msg_signingup">Signning up...</string>
    <string name="zm_msg_active_email_sent">We sent an email to verify your account.</string>
    <string name="zm_msg_active_email_did_not_receive">Didn\'t receive email? Check your spam folder.</string>
    <string name="zm_msg_signup_verified_on_other_device">Verified your email on other devices?</string>
</resources>