<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/btnFrontCamera"
        style="@style/ZMSettingOptionButton.NoLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="left|center_vertical"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:text="@string/zm_btn_front_camera" />

    <TextView
        android:id="@+id/btnBackCamera"
        style="@style/ZMSettingOptionButton.NoLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="left|center_vertical"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:text="@string/zm_btn_back_camera" />

    <TextView
        android:id="@+id/btnNoCamera"
        style="@style/ZMSettingOptionButton.NoLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="left|center_vertical"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:text="@string/zm_btn_no_camera" />

</LinearLayout>