<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zoom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/zm_window_bg" >
    
    <us.zoom.androidlib.widget.ZMIOSStyleTitlebarLayout
        android:id="@+id/panelTitleBar"
        style="@style/ZMTitleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zm_pt_titlebar_height"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:weightSum="1"
        zoom:zm_leftButton="@+id/btnBack"
        zoom:zm_rightButton="@+id/btnSignup"
        zoom:zm_title="@+id/txtTitle" >

        <Button
            android:id="@+id/btnBack"
            style="@style/ZMBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="" />

        <Button
            style="@style/ZMButton.TitleBar"
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zm_btn_next" />
    
        <TextView
            android:id="@+id/txtTitle"
            style="@style/ZMTextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/zm_title_signup" />
        
    </us.zoom.androidlib.widget.ZMIOSStyleTitlebarLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp" >

            <LinearLayout
                android:id="@+id/panelSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/zm_setting_item_group_spacing"
                android:orientation="vertical"
                android:visibility="visible" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >
                    
                    <EditText
                        style="@style/ZMSettingOptionEdit.First"
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zm_hint_email"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:maxLength="128" />
                    
                    <EditText
                        style="@style/ZMSettingOptionEdit.Center"
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zm_hint_first_name"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:maxLength="64" />

                    <EditText
                        style="@style/ZMSettingOptionEdit.Last"
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zm_hint_last_name"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:maxLength="63" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="left"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/chkAcceptTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="10dp" />

                    <TextView
                        android:id="@+id/linkAcceptTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zm_lbl_accept_terms" />
                </LinearLayout>

            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/panelWaiting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="@style/ZMProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:id="@+id/txtWaiting"
                    style="@style/ZMTextView.Medium.OnLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zm_msg_signingup" />
               
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/panelSuccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtSuccessMsg"
                    style="@style/ZMTextView.Instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/zm_msg_active_email_sent" />
                
                <TextView
                    android:id="@+id/txtEmail"
                    style="@style/ZMSettingOptionItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:gravity="center"
                    android:text="test@example.com" />
                
                <TextView
                    style="@style/ZMTextView.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/zm_msg_active_email_did_not_receive" />

                <Button
                    style="@style/ZMButton.NoBackground.Small"
                    android:id="@+id/btnResendActiveEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zm_btn_send_activation_email_again" />
                
                <TextView
                    style="@style/ZMTextView.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/zm_msg_signup_verified_on_other_device" />

                <Button
                    style="@style/ZMButton.NoBackground.Small"
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zm_btn_login" />
            </LinearLayout>

        </LinearLayout>
     
    </ScrollView>
    
</LinearLayout>

