<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zoom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="600dp"
    android:orientation="vertical" >
    
    <us.zoom.androidlib.widget.ZMIOSStyleTitlebarLayout
        android:id="@+id/panelTitleBar"
        style="@style/ZMTitleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zm_pt_titlebar_height"
        android:gravity="center_vertical"
        zoom:zm_leftButton="@+id/btnBack"
        zoom:zm_rightButton="@+id/btnApply"
        zoom:zm_title="@+id/txtTitle" >

        <Button
            android:id="@+id/btnBack"
            style="@style/ZMBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zm_btn_back" />
        
        <Button
            style="@style/ZMButton.TitleBar"
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="55dp"
            android:text="@string/zm_btn_apply" />

        <us.zoom.androidlib.widget.ZMDynTextSizeTextView
            android:id="@+id/txtTitle"
            style="@style/ZMTextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/zm_lbl_personal_meeting_id" />
    </us.zoom.androidlib.widget.ZMIOSStyleTitlebarLayout>
    
    <ScrollView
        android:layout_width="match_parent"
	    android:layout_height="match_parent" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >
            
            <!-- Meeting ID -->

            <TextView
                android:id="@+id/txtInstructions"
                style="@style/ZMTextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:text="@string/zm_lbl_personal_meeting_id_modify_instruction_10" />

            <LinearLayout
                android:background="@drawable/zm_setting_option_item"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.zipow.videobox.view.ConfNumberEditText
                    style="@style/ZMEditText.NoBorder"
                    android:id="@+id/edtConfNumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="12"
                    android:textSize="26sp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="111-111-1111">
                    
                    <requestFocus/>
                    
                </com.zipow.videobox.view.ConfNumberEditText>

            </LinearLayout>
            
            <TextView
                android:id="@+id/txtPMIRule"
                style="@style/ZMTextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/zm_lbl_personal_meeting_id_rule" />
            
            <TextView
                android:id="@+id/txtMessage"
                style="@style/ZMTextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/zm_red"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/zm_lbl_personal_meeting_id_change_fail_invalid" />
            	 
        </LinearLayout>
        
    </ScrollView>
    
</LinearLayout>